# game-lib-example

./: .gitignore  Cargo.toml  README.md  spec.toml
ansi-frontend/: Cargo.toml
ansi-frontend/src/: main.rs
src/: input.rs  lib.rs  policy.rs  prototypes.rs  state.rs
web-frontend/: Cargo.toml  build.sh
web-frontend/src/: lib.rs
web-frontend/web/: index.html  main.js
